# rust-machine-learning-api-example

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml  sample_request.py
src/: main.rs
